<resources>
    <string name="app_name">Fever Log</string>
    <string name="timer_header">Next fever treatment will be available in</string>
    <string name="add_treatment_button">Add fever treatment</string>
    <string name="history_header">Treatments in the past 24 hours</string>
    <string name="view_history_button">View All history</string>
    <string name="title_activity_settings">Settings</string>
    <string name="treatment_name_settings_text_view">Treatment Name</string>
    <string name="max_daily_usage_settings_text_view">Max Daily Usage</string>
    <string name="min_interval_settings_text_view">Min Break In Hours</string>
    <string name="save_button">Save</string>
    <string name="save_settings_menu_item">Save</string>
    <string name="add_treatment_menu_item">Add new</string>
    <string name="history_menu_item">History</string>
    <string name="progress_text_view">00h 00m 00s</string>
    <string name="alert_dialog_title">Warning</string>
    <string name="alert_dialog_text">New treatment is not allowed yet.</string>
    <string name="alert_dialog_ok">Add anyway</string>
    <string name="cancel">Cancel</string>
    <string name="toast_settings_updated">Settings updated</string>
    <string name="no_data">No data available</string>
    <string name="history_header_text_view">History</string>
    <string name="clear_history_menu_item">Clear all</string>
    <string name="delete_history_dialog_title">Erase history?</string>
    <string name="delete_history_dialog_message">This action will erase all treatment data.</string>
    <string name="delete_history_dialog_ok_button">Proceed</string>
    <string name="new_header_custom_treatment">Add New</string>
    <string name="edit_header_custom_treatment">Edit treatment</string>
    <string name="name_custom_treatment">Treatment name</string>
    <string name="date_custom_treatment">Date</string>
    <string name="time_custom_treatment">Time</string>
    <string name="update_custom_treatment">Update</string>
    <string name="create_custom_treatment">Create</string>
    <string name="empty_name_field">Blank treatment name</string>
    <string name="empty_date_field">Blank date</string>
    <string name="empty_time_field">Blank time</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="new_treatment_created">New treatment created.</string>
    <string name="deleted">DELETED</string>
    <string name="undo">UNDO</string>
</resources>
